--- a/README
+++ b/README
@@ -50,35 +50,22 @@ class ExampleResource extends Resource {
 }
 
 
-How to set it up
-----------------
-In general terms:
- * Make your webserver have it's document root pointed to the folder `docroot`.
- * Point your browser to the webserver with this setting and your done.
+How to get started
+------------------
 
+The best place to get started is to get the hello world example running on your
+system, to do this you will need a web server running PHP4+.
 
-	If you do not yet have a virtual host, you might like to create one.
-		This can be done by:
-			creating an alias in your /etc/hosts file
-			creating a server-configuration for that server and
-			make the documentroot for that server point to the folder `docroot`.
-				an example for Apache( using GIN as name of the host/webserver) :
-				<VirtualHost *:80>
-					ServerName GIN
-					Documentroot /var/www/tonic/docroot
-					<Directory /var/www/tonic/docroot>
-						Options +FollowSymLinks
-						AllowOverride All
-						Order Allow,Deny
-						Allow From All
-					</Directory>
-				</VirtualHost>
-		Another option of course is to use your localhost as webserver.
-			the documentroot of that webserver will still need to be
-			configured to be the folder `docroot` though.
-	Hopefully you will now be able to see a welcoming screen
-		when the browser is directed to the server configured in the previous step.
+Place all of the Tonic files into your PHP include path so that other scripts can
+find it. By default on Windows this will probably be in "c:\php\includes\tonic" or
+on Linux/Unix it will be "/usr/share/php/tonic"
 
+Copy "docroot/dispatch.php" into your servers document root and edit it so that the
+require_once statement paths so that the Tonic library and the examples.
+
+Finally you need to route all incoming requests to dispatch.php. How you do this
+depends on your web server. If you are using Apache, the simplest way is to copy
+the .htaccess file from "docroot/.htaccess" into your Apache document root.
 
 
 For more information, read the code. Start with the dispatcher "docroot/dispatch.php"
